# synoi-gap

./: .gitattributes  .gitignore  CAPABILITY_TAXONOMY.md  CHANGELOG.md  CONFORMANCE_VECTORS.json  CONTRIBUTING.md  ERROR_CODES.md  IMPLEMENTING.md  LICENSE  LICENSE-CC0.md  OPTIONAL_CAPABILITIES_SPEC.md  README.md  SECURITY.md  THREAT_MODEL.md  USE_CASES.md  openapi.yaml  package-lock.json  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md  spec_clarification.md
.github/workflows/: ci.yml  publish.yml
profiles/: PROFILE_AUTHORING_GUIDE.md  gap-TEMPLATE-00.md  gap-ai-00.md  gap-consumer-00.md  gap-finance-00.md  gap-gaming-00.md  gap-healthcare-00.md  gap-legal-00.md  gap-supply-chain-00.md
python/: README.md  pyproject.toml
python/examples/: openjarvis_example.py  openjarvis_pr_patch.py
python/synoi_gap/: __init__.py  client.py  oid.py  validate.py
python/synoi_gap/integrations/: openjarvis.py
python/tests/: test_oid.py  test_openjarvis_integration.py  test_validate.py
src/: canonicalize.ts  capabilities.ts  cdro.ts  channels.ts  constants.ts  index.ts  oid.ts  receipts.ts  revocations.ts  validate.ts  workflows.ts
test/: conformance.test.ts  oid.test.ts  round-trip.test.ts  types.test.ts  validate.test.ts
